--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.5.0
 blinker==1.4
 Django==4.0.4
+django-filter==21.1
+django-rest-framework-mongoengine==3.4.1
 djangorestframework==3.13.1
 dnspython==2.2.1
+Markdown==3.3.6
 mongoengine==0.24.1
 Pillow==9.1.0
 pymongo==4.1.1
