--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: mongo
     container_name: mongo
-    env_file: .env
+    env_file: docker.env
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=root
@@ -21,7 +21,7 @@ services:
     image: app:latest
     container_name: app
     command: bash -c "python manage.py runserver 0.0.0.0:8000"
-    env_file: .env
+    env_file: docker.env
     volumes:
       - ${PWD}:/app
     ports:
