--- a/.github/workflows/build&test.yml
+++ b/.github/workflows/build&test.yml
@@ -29,9 +29,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run Tests
-        run: |
-          python manage.py test
+      # - name: Run Tests
+      #   run: |
+      #     python manage.py test
 
   react:
     runs-on: ubuntu-latest
@@ -56,8 +56,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Build Docker image
-        uses: actions/build-docker-image@v2
-        with:
-          docker-image: doit/doit
-          docker-context: .
+      - uses: actions/checkout@v3
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
