#62-config: trigger deploy on pr in order to test it

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,8 @@ name: Deploy Production
 on:
   push:
     branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 # This workflow will build and push a Docker container to an Azure Web App when a commit is pushed to your default branch.
 #
