--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ on:
 # For more samples to get started with GitHub Action workflows to deploy to Azure: https://github.com/Azure/actions-workflow-samples
 
 env:
-  AZURE_WEBAPP_NAME: doit # set this to the name of your Azure Web App
+  AZURE_WEBAPP_NAME: doit-app # set this to the name of your Azure Web App
 
 permissions:
   contents: read
