--- a/azure-compose.yml
+++ b/azure-compose.yml
@@ -1,26 +1,18 @@
 version: "3.7"
 
 services:
-  db:
-    image: mongo
-    container_name: mongo
+  mongo:
+    image: ghcr.io/p2jn/doit-mongo
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=root
       - MONGO_INITDB_DATABASE=doit
-    volumes:
-      - ${WEBAPP_STORAGE_HOME}/_data/mongo:/data/db
-      - ${WEBAPP_STORAGE_HOME}/docker/_mongo/fixtures:/import
-      - ${WEBAPP_STORAGE_HOME}/docker/_mongo/scripts/init.sh:/docker-entrypoint-initdb.d/setup.sh
-    ports:
-      - 27017:27017
 
   web:
-    image: ghcr.io/p2jn/doit-prod
-    container_name: doit
-    command: bash -c "python manage.py runserver 0.0.0.0:80"
-    volumes:
-      - ${WEBAPP_STORAGE_HOME}:/app
+    image: ghcr.io/p2jn/doit-main
+    command: python manage.py runserver 0.0.0.0:80
+    environment:
+      - DOCKER=true
     ports:
       - 80:80
     depends_on:
