--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "postcss-preset-env": "^7.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.32.2",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
