#35-config: push azure-compose file

--- a/azure-compose.yml
+++ b/azure-compose.yml
@@ -8,11 +8,29 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=root
       - MONGO_INITDB_DATABASE=doit
 
+  postgres_db:
+    image: ghcr.io/p2jn/doit-postgres
+    container_name: postgres
+    environment:
+      - POSTGRES_USER=doit
+      - POSTGRES_PASSWORD=doit
+      - POSTGRES_DB=doit
+      - POSTGRES_HOST=postgres_db
+    ports:
+      - 5432:5432
+
   web:
     image: ghcr.io/p2jn/doit-main
     command: python manage.py runserver 0.0.0.0:80
     environment:
       - DOCKER=true
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=root
+      - MONGO_INITDB_DATABASE=doit
+      - POSTGRES_USER=doit
+      - POSTGRES_PASSWORD=doit
+      - POSTGRES_DB=doit
+      - POSTGRES_HOST=postgres_db
     ports:
       - 80:80
     depends_on:
