#46-feat: add weekly chart to goal stats

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,12 @@
     "@types/react-dom": "^18.0.5",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "postcss": "^8.4.14",
     "postcss-cli": "^9.1.0",
     "postcss-preset-env": "^7.7.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.32.2",
     "react-material-ui-carousel": "^3.4.2",
