--- a/.github/workflows/build&test.yml
+++ b/.github/workflows/build&test.yml
@@ -29,9 +29,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      # - name: Run Tests
-      #   run: |
-      #     python manage.py test
+      - name: Run Tests
+        run: |
+          python manage.py test
 
   react:
     runs-on: ubuntu-latest
