--- a/.github/workflows/build&test.yml
+++ b/.github/workflows/build&test.yml
@@ -20,6 +20,10 @@ jobs:
         options: --health-cmd mongo --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
+      - env:
+          MONGO_INITDB_DATABASE: doit
+          MONGO_INITDB_ROOT_USERNAME: root
+          MONGO_INITDB_ROOT_PASSWORD: root
       - uses: actions/checkout@v3
       - name: Set up Python 3.9
         uses: actions/setup-python@v3
@@ -29,9 +33,16 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install codacy-coverage
       - name: Run Tests
         run: |
-          python manage.py test
+          coverage run ./manage.py test 
+          coverage xml
+      - name: Codacy Coverage Reporter
+        uses: codacy/codacy-coverage-reporter-action@v1.1.0
+        with:
+          project-token: ${{ secrets.CODACY_API_TOKEN }}
+          coverage-reports: ./coverage.xml
 
   react:
     runs-on: ubuntu-latest
