--- a/.github/workflows/build&test.yml
+++ b/.github/workflows/build&test.yml
@@ -20,10 +20,6 @@ jobs:
         options: --health-cmd mongo --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
-      - env:
-          MONGO_INITDB_DATABASE: doit
-          MONGO_INITDB_ROOT_USERNAME: root
-          MONGO_INITDB_ROOT_PASSWORD: root
       - uses: actions/checkout@v3
       - name: Set up Python 3.9
         uses: actions/setup-python@v3
@@ -35,6 +31,10 @@ jobs:
           pip install -r requirements.txt
           pip install codacy-coverage
       - name: Run Tests
+        env:
+          MONGO_INITDB_DATABASE: doit
+          MONGO_INITDB_ROOT_USERNAME: root
+          MONGO_INITDB_ROOT_PASSWORD: root
         run: |
           coverage run ./manage.py test 
           coverage xml
