--- a/.github/workflows/build&test.yml
+++ b/.github/workflows/build&test.yml
@@ -18,13 +18,13 @@ jobs:
         ports:
           - 27017:27017
         options: --health-cmd mongo --health-interval 10s --health-timeout 5s --health-retries 5
-      postgres_db:
+      postgres:
         image: postgres
         env:
           POSTGRES_USER: doit
           POSTGRES_PASSWORD: doit
           POSTGRES_DB: doit
-          POSTGRES_HOST: postgres_db
+          POSTGRES_HOST: postgres
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
@@ -48,7 +48,7 @@ jobs:
           POSTGRES_USER: doit
           POSTGRES_PASSWORD: doit
           POSTGRES_DB: doit
-          POSTGRES_HOST: postgres_db
+          POSTGRES_HOST: postgres
         run: |
           coverage run ./manage.py test 
           coverage xml
