--- a/.github/workflows/build&test.yml
+++ b/.github/workflows/build&test.yml
@@ -3,6 +3,8 @@ name: Build&Test
 on:
   pull_request:
     branches: ["main", "develop"]
+  push:
+    branches: ["main", "develop"]
 
 jobs:
   django:
